--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -6,15 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= locals.title %></title>
     <meta name="description" content="<%= locals.description %>" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <%- body %>
+    <!-- Divides into section -->
+    <!-- 1.Header -->
+    <%- include('../partials/header.ejs') %>
+
+    <!-- 2.Footer -->
+    <%- include('../partials/footer.ejs') %> <%- body %>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
