--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -14,15 +14,21 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&family=Unbounded:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Divides into section -->
     <!-- 1.Header -->
     <%- include('../partials/header.ejs') %>
-
-    <!-- 2.Footer -->
-    <%- include('../partials/footer.ejs') %> <%- body %>
-
+    <!-- 2. Body -->
+    <%- body %>
+    <!-- 3.Footer -->
+    <%- include('../partials/footer.ejs') %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
