--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,13 +5,13 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  /* font-family: "Unbounded", cursive; */
   background-color: var(--background-color);
   color: var(--bs-primary-rgb);
   font-weight: 300;
   font-size: 1.2rem;
-  background-image: url(../img/);
+  background-image: url(../img/noise-bg.png);
 }
+
 h1,
 h2,
 h3,
@@ -26,12 +26,13 @@ h6 {
   max-width: 1600px;
 }
 
-/* Buttons */
+/* Button */
 .btn {
   padding-left: 1.6rem;
   padding-right: 1.6rem;
   border-radius: 2rem;
 }
+
 .btn-primary {
   --bs-btn-color: #fff;
   --bs-btn-bg: var(--bs-primary-rgb);
@@ -48,6 +49,7 @@ h6 {
   --bs-btn-disabled-bg: var(--bs-primary-rgb);
   --bs-btn-disabled-border-color: var(--bs-primary-rgb);
 }
+
 .btn-outline-primary {
   --bs-btn-color: var(--bs-primary-rgb);
   --bs-btn-border-color: var(--bs-primary-rgb);
@@ -67,28 +69,26 @@ h6 {
 
 .pagination {
   --bs-pagination-color: var(--bs-primary-rgb);
-  --bs-paginatiom-active-bg: var(--bs-primary-rgb);
-  --bs-paginatiom-active-border-color: var(--bs-primary-rgb);
+  --bs-pagination-active-bg: var(--bs-primary-rgb);
+  --bs-pagination-active-border-color: var(--bs-primary-rgb);
 }
+
 /* Home */
-
-@media(min-width:1200px){
-  .home{
-    background: url("../img/") left bottom no-repeat,
-    url("../img/") right bottom no-repeat,
-    url("../img/") left top repeat,
-    var(--background-color)
-
+@media (min-width: 1200px) {
+  .home {
+    background: url("../img/human-1.svg") left bottom no-repeat,
+      url("../img/human-2.svg") right bottom no-repeat,
+      url("../img/noise-bg.svg") left top repeat, var(--background-color);
   }
 }
-.home {
-}
+
 .home-title::before {
   content: url("../img/stars.svg");
   position: absolute;
   left: -50px;
   top: -30px;
 }
+
 .home-title::after {
   content: url("../img/stars.svg");
   position: absolute;
