create a dashboard page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
           Notes is a simple to use free note taking app made with Node.js, EJS &
           MongoDB.
         </p>
-        <a href="/auth/google" class="btn btn-primart btn-lg"
+        <a href="/auth/google" class="btn btn-primary btn-lg"
           >Try Notes, Its FREE!</a
         >
       </div>
