--- a/views/404.ejs
+++ b/views/404.ejs
@@ -6,7 +6,7 @@
           Page Not Found...
         </h1>
 
-        <a href="/" class="btn btn-primart btn-lg">Explore Notes..</a>
+        <a href="/" class="btn btn-primary btn-lg">Explore Notes..</a>
       </div>
     </div>
   </main>
