--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -6,5 +6,39 @@
     <div class="col text-end">
       <a href="/dashboard/add" class="btn btn-primary">+ New Note</a>
     </div>
+
+    <div class="row">
+        <% 
+            if(notes.length>0){ for(var i=0;i<notes.length;i++) { %>
+                <div class="col-sm-3 mb-4">
+
+                    <div class="card border-primary" style="min-height: 210px;">
+                        
+                        <a href="/dashboard/item <%= notes[i]._id %>" class="card-body text-decoration-none">
+                            
+                            <h5 class="card-title">
+                                <%= notes[i].title %>
+                            </h5>
+                            <p class="card-text">
+                                <%= notes[i].body %>
+                            </p>
+                        </a>
+                        </div>
+                    </div>
+             <% }} else { %>
+                        <div class="row">
+                            <div class="col-3">  
+                            <img src="/img/human-3.svg" alt="Human" srcset="">    
+                            </div>
+                            <div class="col mt-md-4">
+                                <h2>Okay...</h2>
+                                <h4>Let's start with your first note!<br> <br></h4>
+                                <a href="/dashboard/add">Create One!</a>
+                            </div>
+                        </div>
+            <% } %>
+                    
+             
+    </div>
   </div>
 </div>
