--- a/views/dashboard/add.ejs
+++ b/views/dashboard/add.ejs
@@ -18,11 +18,11 @@
   
     <form action="/dashboard/add" method="POST" class="position-relative">
       <div class="form-group mb-4 position-absolute" style="left: 1px ;top:1px;right:1px;">
-          <input type="text" class="form-control fw-bold border-0 fs-4" id="title" name="title" value="" placeholder="Title">
+          <input type="text" class="form-control fw-bold border-0 fs-4" id="title" name="title" value="" placeholder="Title" required>
       </div>
   
       <div class="form-group mb-4 " >
-          <textarea class="form-control pt-5 fs-4" id="body" name="body" placeholder="Take a note..." rows="12"></textarea>
+          <textarea class="form-control pt-5 fs-4" id="body" name="body" placeholder="Take a note..." rows="12" required></textarea>
       </div>
   
       <div class="form-group">
